--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -44,6 +44,10 @@
             z-index: 2;
             height: 2rem;
 
+            @media screen and (max-width: 768px) {
+                height: auto;
+            }
+            
             .i {
                 width: 0.5rem;
                 height: 0.5rem;
@@ -52,6 +56,10 @@
                 place-content: center;
                 background: var(--f);
                 transition: opacity var(--ease) 0.3s;
+
+                @media screen and (max-width: 768px) {
+                    display: none;
+                }
 
                 img {
                     width: 0.15rem;
@@ -68,6 +76,10 @@
                 @include ellipsis(1);
                 margin-top: 0.04rem;
                 transition: color var(--ease) 0.3s;
+
+                @media screen and (max-width: 768px) {
+                    @include ellipsis(3);
+                }
             }
 
             .scroll_info{
@@ -82,9 +94,18 @@
         }
 
         &:hover {
+
+            @media screen and (max-width: 768px) {
+                background: var(--bc);
+            }
+
             .c_info {
                 transform: translateY(-0.7rem);
                 background-color: var(--bc);
+
+                @media screen and (max-width: 768px) {
+                    transform: translateY(0px);
+                }
 
                 >* {
                     color: var(--f);
@@ -150,6 +171,10 @@
     .container {
         align-items: center;
 
+        .s{
+            text-align: justify;
+        }
+
         @media screen and (max-width: 768px) {
             .s3_right {
                 padding: 0.3rem 0 0.3rem 0;
@@ -186,6 +211,12 @@
             margin-right: 0.1rem;
             padding-right: 0.15rem;
             width: calc(100% + 0.2rem);
+
+            .i{
+                @media screen and (max-width: 768px) {
+                    display: none;
+                }
+            }
 
             .s {
                 @include ellipsis(30);
