--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -120,13 +120,15 @@
             }
 
             img {
-                width: 0.3rem;
+                height: 0.5rem;
+                width: 0.5rem;
                 position: relative;
                 z-index: 2;
                 transition: all var(--ease) 0.3s;
 
                 @media screen and (max-width:1440px) {
-                    width: 0.15rem;
+                    height: 0.3rem;
+                    width: 0.3rem;
                 }
 
                 &:first-child {
@@ -187,6 +189,7 @@
                 @include ellipsis(7);
                 height: 1.6rem;
                 transition: all var(--ease) 0.3s;
+                text-align: justify;
 
                 @media screen and (max-width:1440px) {
                     height: 1.1rem;
@@ -282,6 +285,10 @@
         color: var(--f);
         max-width: 7.5rem;
 
+        .s{
+            text-align: justify;
+        }
+
         @media screen and (max-width:768px) {
             padding: 0.3rem;
 
@@ -298,6 +305,10 @@
     .se4_item {
         position: sticky;
         top: 1.2rem;
+
+        @media screen and (max-width:768px) {
+            min-height: 4rem;
+        }
 
         &:nth-child(2) {
             z-index: 3;
