--- a/src/scss/layout/_solution.scss
+++ b/src/scss/layout/_solution.scss
@@ -4,6 +4,7 @@
         border-radius: 0.08rem;
         position: relative;
         overflow: hidden;
+        max-width: 4.6rem;
 
         .s1_img {
             border-bottom-left-radius: 0;
@@ -16,6 +17,7 @@
 
         .s1_title {
             padding: 0.3rem 0.24rem;
+            min-height: 1.05rem;
 
             p {
                 line-height: 1.4;
@@ -60,6 +62,7 @@
 
         .s {
             color: var(--1);
+            text-align: justify;
         }
     }
 }
@@ -90,6 +93,7 @@
 
         .s {
             color: var(--1);
+            text-align: justify;
         }
     }
 }
@@ -156,7 +160,6 @@
             transition: all var(--ease) 0.3s;
 
             img {
-                object-fit: none;
                 transition: all var(--ease) 0.3s;
             }
         }
@@ -177,11 +180,23 @@
             }
         }
     }
+
+    #pageBox{
+        display: none;
+
+        &.active{
+            display: flex;
+        }
+    }
 }
 
 .s6_list {
     display: flex;
     background: var(--0);
+
+    @media screen and (max-width: 768px) {
+        overflow-x: auto;
+    }
 
     .s6_item {
         position: relative;
@@ -232,6 +247,10 @@
         opacity: 0;
         transition: all var(--ease) 0.3s;
         z-index: 1;
+
+        @media screen and (max-width: 768px) {
+            min-width: 10rem;
+        }
 
         .s6_showImg_item {
             opacity: 0;
@@ -284,6 +303,9 @@
 
     .s6_list_smallImg {
         z-index: 2;
+        @media screen and (max-width: 768px) {
+            min-width: 10rem;
+        }
     }
 
     &:hover {
