--- a/src/scss/layout/_solution.scss
+++ b/src/scss/layout/_solution.scss
@@ -5,6 +5,7 @@
         position: relative;
         overflow: hidden;
         max-width: 4.6rem;
+        height: auto;
 
         .s1_img {
             border-bottom-left-radius: 0;
